# cncFirmware

./: .gitignore  CMakeLists.txt  platformio.ini
sitl/: Arduino.cpp  Arduino.h  CMakeLists.txt
src/: AnalogJoystick.h  GCode.h  HardwareConfig.h  clock.h  gCodeInstructions.h  main.cpp  motionController.cpp  motionController.h  stepperDriver.h  units.h  vector.h
test/: CMakeLists.txt  Square.gcode  motion_controller_test.cpp
